fix: z-index issue

--- a/assets/styles/variables.sass
+++ b/assets/styles/variables.sass
@@ -14,7 +14,7 @@ $max-text-width: 45em
 $transition-hover: ease .25s
 $transition-portrait: ease-out .25s
 $transition-button: ease-out .25s
-$transition-nav: ease-out .25s
+$transition-nav: ease-out .2s
 
 body
   --spacing-one: 8px
